@@ -37,9 +37,8 @@ public class HollowObjectTypeWriteStateTest {
 
         HollowProducer p1 = HollowProducer.withPublisher(blobStore).withBlobStager(blobStager).withTargetMaxTypeShardSize(32).build();
         p1.initializeDataModel(String.class);
-        long v1 = p1.runCycle(ws -> {
-            ws.add("A");
-        });
+        long v1 = p1.runCycle(ws ->
+            ws.add("A"));
 
         HollowProducer p2 = HollowProducer.withPublisher(blobStore).withBlobStager(blobStager).withTargetMaxTypeShardSize(32).build();
         p2.initializeDataModel(String.class, Long.class);
@@ -48,7 +47,7 @@ public class HollowObjectTypeWriteStateTest {
             ws.add("A");
             ws.add("B");
             for (int i=0; i<50; i++) {
-                ws.add(new Long(i));
+                ws.add(Long.valueOf(i));
             }
         });
 
@@ -84,7 +83,7 @@ public class HollowObjectTypeWriteStateTest {
             // override cycle start time with a strictly incrementing count to work around clock skew
             ws.add("A");
             for (int i=0; i<50; i++) { // results in 2 shards at shard size 32
-                ws.add(new Long(i));
+                ws.add(Long.valueOf(i));
             }
         });
 
@@ -104,9 +103,8 @@ public class HollowObjectTypeWriteStateTest {
         assertEquals(v1, consumer.getCurrentVersionId());
         assertEquals(2, consumer.getStateEngine().getTypeState("Long").numShards());
 
-        long v2 = p1.runCycle(ws -> {
-            ws.add("A");
-        });
+        long v2 = p1.runCycle(ws ->
+            ws.add("A"));
         consumer.triggerRefreshTo(v2);
         assertEquals(v2, consumer.getCurrentVersionId());
         assertEquals(2, consumer.getStateEngine().getTypeState("Long").numShards()); // Long type has a ghost record
@@ -124,7 +122,7 @@ public class HollowObjectTypeWriteStateTest {
             // override cycle start time with a strictly incrementing count to work around clock skew
             ws.add("A");
             for (int i=0; i<50; i++) { // results in 2 shards at shard size 32
-                ws.add(new Long(i));
+                ws.add(Long.valueOf(i));
             }
         });
         consumer.triggerRefreshTo(v4);
@@ -151,7 +149,7 @@ public class HollowObjectTypeWriteStateTest {
         long v1 = p1.runCycle(ws -> {
             // override cycle start time with a strictly incrementing count to work around clock skew
             for (int i=0; i<50; i++) { // results in 2 shards at shard size 32
-                ws.add(new Long(i));
+                ws.add(Long.valueOf(i));
             }
         });
 
@@ -180,7 +178,7 @@ public class HollowObjectTypeWriteStateTest {
 
         long v2 = p2.runCycle(ws -> {
             for (int i=0; i<100; i++) { // results in 2 shards at shard size 32
-                ws.add(new Long(i));
+                ws.add(Long.valueOf(i));
             }
         });
 
